fix: resolve sonar issues